# ProfessorSurvivor

./: .gitignore  CMakeLists.txt
assets/shaders/: redplayer.frag
includes/: Application.h  Enemy.h  Entity.h  Player.h
includes/Core/: Application.h  EnemySpawner.h  Entity.h
includes/Entities/: Enemy.h  Player.h
includes/GUI/: DeathScreen.h  FPSCounter.h  GameTimer.h  HPBar.h
src/: Application.cpp  Enemy.cpp  Entity.cpp  Player.cpp  main.cpp
src/Core/: Application.cpp  EnemySpawner.cpp  Entity.cpp
src/Entities/: Enemy.cpp  Player.cpp
src/GUI/: DeathScreen.cpp  FPSCounter.cpp  GameTimer.cpp  HPBar.cpp
